--- a/app/package.json
+++ b/app/package.json
@@ -10,7 +10,8 @@
   "author": "holdMyTea",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^12.1.1"
+    "discord.js": "^12.1.1",
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
